@@ -1,21 +1,19 @@
 package backend.controllers;
 
-import backend.dto.DeleteProductDTO;
-import backend.dto.GetProductByIdDTO;
-import backend.dto.InsertProductDTO;
-import backend.dto.ProductListDTO;
+import backend.dto.*;
+import backend.models.Category;
+import backend.models.Company;
 import backend.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import backend.dto.ModifyProductDTO;
-import backend.dto.ModifyProductDetailDTO;
-import backend.dto.ModifyProductAssetDTO;
+
+import javax.sound.sampled.Port;
 import java.util.ArrayList;
 import java.util.List;
-import java.lang.Long;
-@CrossOrigin(origins = "http://localhost:3000/", maxAge = 3600)
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/api")
 public class ProductController {
@@ -28,26 +26,27 @@ public class ProductController {
     }
 
     @GetMapping("/v1/product/{type}")
-    public ResponseEntity<List<ProductListDTO>> getAllPhone(@PathVariable("type")String type,
+    public ResponseEntity<List<ProductListDTO>> getAllProduct(@PathVariable("type")String type,
                                                             @RequestParam(name = "page", required = false,defaultValue = "1")int page,
                                                             @RequestParam(value = "search",required = false)String search,
-                                                            @RequestParam(value = "company",required = false)String company){
+                                                            @RequestParam(value = "company",required = false)String company,
+                                                              @RequestParam(value = "limit",required = false,defaultValue = "10")int limit){
         List<ProductListDTO> productListDTOS = new ArrayList<>();
         if(search==null){
-            productListDTOS = productService.getProductList(page,type);
+            productListDTOS = productService.getProductList(page,type,limit);
         }
         else{
-            productListDTOS = productService.findProductByKeyWord(search,page);
+            productListDTOS = productService.findProductByKeyWord(search,page,limit);
         }
         if (productListDTOS == null){
             return ResponseEntity.notFound().build();
         }
         if(company == null || company.isEmpty() || company.isBlank()) return ResponseEntity.ok(productListDTOS);
-        return ResponseEntity.ok(productListDTOS.stream().filter(productListDTO -> productListDTO.getCompany().equals(company)).toList());
+        return ResponseEntity.ok(productListDTOS.stream().filter(productListDTO -> productListDTO.getCompany().toUpperCase().equals(company.toUpperCase())).collect(Collectors.toList()));
     }
 
-    @GetMapping("/v1/productbyid/{productId}")
-    public ResponseEntity<GetProductByIdDTO> getProductById(@PathVariable("productId")int productId) {
+    @GetMapping("/v1/product")
+    public ResponseEntity<GetProductByIdDTO> getProductById(@RequestParam(name= "productId", required = false,defaultValue = "1" )int productId) {
         GetProductByIdDTO product = new GetProductByIdDTO();
         product = productService.getProductById(productId);
 
@@ -56,6 +55,20 @@ public class ProductController {
         }
 
         return ResponseEntity.ok(product);
+    }
+
+    @GetMapping("/v1/countproduct/{type}")
+    public ResponseEntity<Integer> countProduct(@PathVariable("type")String type) {
+        int count = productService.countProduct(type);
+        return ResponseEntity.ok(count);
+    }
+
+    @GetMapping("/admin/product")
+    @PreAuthorize("hasAuthority('ADMIN')")
+    public ResponseEntity<List<ProductListDTO>>getAdminProduct(){
+        List<ProductListDTO>productListDTOS = productService.getAdminProduct();
+        if(productListDTOS.isEmpty()) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(productListDTOS);
     }
 
     @DeleteMapping("/admin/product/delete")
@@ -84,9 +97,53 @@ public class ProductController {
         return ResponseEntity.badRequest().build();
     }
     
-    @PostMapping("v1/admin/product/modify")
-    public ResponseEntity<String>modifyProduct(@RequestBody ModifyProductDTO modProdDTO){
-        if(productService.modifyProductByID(modProdDTO)){
+
+
+    @GetMapping("/v1/getlistcompany")
+    public ResponseEntity<List<Company>> getListCompany(){
+        List<Company> listCompany = productService.getListCompany();
+        if(listCompany.isEmpty()) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(listCompany);
+    }
+
+    @GetMapping("/v1/getlistcategory")
+    public ResponseEntity<List<Category>> getListCategory(){
+        List<Category> listCategory = productService.getListCategory();
+        if(listCategory.isEmpty()) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(listCategory);
+    }
+
+    @PostMapping("/v1/modify/spec")
+    public ResponseEntity<String>modifySpec(@RequestBody SpecModifyDTO spec){
+        if(productService.modifySpec(spec)){
+            return ResponseEntity.ok("Sửa thuoc tinh thành công");
+        }
+        return ResponseEntity.badRequest().build();
+    }
+    @PostMapping("/v1/delete/spec")
+    public ResponseEntity<String>deleteSpec(@RequestBody DeleteSpecDTO spec){
+        if(productService.deleteSpecById(spec.getSpecId())){
+            return ResponseEntity.ok("Sửa thuoc tinh thành công");
+        }
+        return ResponseEntity.badRequest().build();
+    }
+    @PostMapping("/v1/delete/asset")
+    public ResponseEntity<String>deleteAsset(@RequestBody DeleteAssetDTO asset){
+        if(productService.deleteAssetById(asset.getAssetId())){
+            return ResponseEntity.ok("Sửa thuoc tinh thành công");
+        }
+        return ResponseEntity.badRequest().build();
+    }
+    @PostMapping("/v1/modify/asset")
+    public ResponseEntity<String>modifyAsset(@RequestBody AssetModifyDTO asset){
+        if(productService.modifyAsset(asset)){
+            return ResponseEntity.ok("Sửa thuoc tinh thành công");
+        }
+        return ResponseEntity.badRequest().build();
+    }
+    @PostMapping("/v1/modify/product")
+    public ResponseEntity<String>modifyProduct(@RequestBody ProductModifyDTO modProdDTO){
+        if(productService.modifyProduct(modProdDTO)){
             return ResponseEntity.ok("Sửa sản phẩm thành công");
         }
         return ResponseEntity.badRequest().build();
